Updated charts and webfiles

--- a/index.html
+++ b/index.html
@@ -18,20 +18,25 @@
 				<a href="index.html" class="logo"><strong>Cardiac Nats</strong></a>
 				<nav>
 					<a href="#menu">Menu</a>
-				</nav>
-			</header>
 
+				</nav>
+
+
+			</header>
 		<!-- Nav -->
 			<nav id="menu">
 				<ul class="links">
 				<li><a href="fans.html">The Fan Experience</a></li>
 					<li><a href="wildcard.html">The Wild Card Game</a></li>
 					<li><a href="worldseries.html">The World Series</a></li>
+					<li><a href="about.html">About This Project</a></li>
 				</ul>
 			</nav>
 
 		<!-- Banner -->
 			<section id="banner">
+			 <figure><img src="images/archives_long.jpg" style="max-height:50%;"  alt="crowd during parade" /> </figure>
+
 				<h2>Playoff Baseball is a thrilling, heart-pounding, wild ride.</a></h2>
 
 					<p>For baseball fans, a pennant race can be stressful, delightful, excruciating and exhilirating.
@@ -52,7 +57,7 @@
    					 </figure>
 
    					<p>This was an unprecedented stretch run. Every game was a thriller. And the fans were in for a wild experience.
-   					To find out just how wild, we took FitBit data from fan volunteers and analyzed heart rate and sleeping patterns..</p>
+   					To find out just how wild, we took FitBit data from fan volunteers and analyzed heart rate and sleeping patterns.</p>
    					<h1>This is what October Baseball does to you.</h1>
 
 
@@ -67,14 +72,15 @@
 		<!-- One -->
 			<article id="one" class="post style1">
 				<div class="image">
-					<img src="images/in_the_fight.jpg" style="max-width:50%;" alt="Fans in a crowd" data-position="75% center" />
+					<img src="images/in_the_fight.jpg" style="max-height:20%;" alt="Fans in a crowd" data-position="75% center" />
 				</div>
 				<div class="content">
 					<div class="inner">
 						<header>
 							<h2><a href="generic.html">Fans and the Playoff Race</a></h2>
 						</header>
-						<p>Heart pounding?  Not getting enough sleep? You're not alone--- the data suggests this is the common fan experience.</p>
+						<p>Heart pounding?  Not getting enough sleep? You're not alone--- the data suggests this is the common fan experience.
+						Imagine an entire fan base -- thousands of people-- sharing the same sleep-deprived, heart-pounding roller coaster ride. </p>
 						<p>We explore FitBit data from September 1-November 15, 2019.</p>
 
 						<ul class="actions">
@@ -98,7 +104,9 @@
 						<header>
 							<h2><a href="generic.html">The National League Wild Card Game</a></h2>
 						</header>
-						<p>Held on October 1, 2019, the Nationals' 4-3 victory over the Milwaukee Brewers is considered by many fans to be the most thrilling game in Nationals history.</p>
+						<p>Held on October 1, 2019, the Nationals' 4-3 victory over the Milwaukee Brewers is considered by many fans to be the most thrilling game in Nationals history.
+						Trailing for most of the game, the Nationals mounted a late-innings rally to stun the Brewers and earn their playoff berth.</p>
+						<p>We plot the key plays and the fans' reactions. </p>
 						<ul class="actions">
 							<li><a href="wildcard.html" class="button alt">Deep Dive</a></li>
 						</ul>
@@ -121,6 +129,8 @@
 							<h2><a href="generic.html">Fight Finished</a></h2>
 						</header>
 						<p>On October 30, 2019, the Nationals staged one last late-innings rally to beat the Houston Astros 6-2 and secure their franchise's first World Series championship.</p>
+						<p>After winning the first two games of the series, the Nationals lost the next three in front of their home crowd, forcing them to play (and ultimately win) two elimination games on the road. </p>
+						<p>If you think that sounds stressful, you're not alone-- our fan volunteers agree. </p>
 						<ul class="actions">
 							<li><a href="worldseries.html" class="button alt">Deep Dive</a></li>
 						</ul>
@@ -137,6 +147,7 @@
 
 		<!-- Footer -->
 			<footer id="footer">
+			<p> <font color="white" size=3>Visit the Nationals on Social Media: </font></p>
 				<ul class="icons">
 					<li><a href="https://twitter.com/Nationals" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 					<li><a href="https://www.facebook.com/Nationals/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
