--- a/wildcard.html
+++ b/wildcard.html
@@ -46,11 +46,11 @@
 							<img src="images/soto_hit.jpg" alt="Juan Soto gets a hit" />
 					</div>
  					</header>
-					<p>Considered by many to be one of the most exciting games in Nationals Park histor, the 2019 National League Wild Card Game was a perfect metaphor for the Nationals' 2019 season.
+					<p>Considered by many to be one of the most exciting games in Nationals Park history, the 2019 National League Wild Card Game was a perfect metaphor for the Nationals' 2019 season.
 
 					The Nationals' offense was frustratingly quiet for most of the game, but the team managed to string together key, timely hits late in the game, pressuring the Brewers into surrendering the late lead.</p>
 
-					<p> The chart below uses over 40,000 FitBit data points to plot the heart rates of selected Washington Nationals along a time axis mapped to key plays during the game. By the later innings, the heartbeat lines appear to loosely converge,
+					<p> The chart below uses over 40,000 FitBit data points to plot the heart rates of selected Washington Nationals fans along a time axis mapped to key plays during the game. By the later innings, the heartbeat lines appear to loosely converge,
 					further illustrating the shared fan experience.  </p>
 					<p> Click on the labels in the Legend to dim or activate individual plot lines. </p>
 					<p> There is currently no identified event for the communal spike in heart rate about an hour before game time; this could correspond to part of the pregame entertainment or crowd "hype" activities.</p>
