--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 		<!-- Banner -->
 			<section id="banner">
-			 <figure><img src="images/archives_long.jpg" style="max-height:50%;"  alt="crowd during parade" /> </figure>
+			 <figure><img src="images/archives_long_2.jpg" style="max-height:50%;"  alt="crowd during parade" /> </figure>
 
 				<h2>Playoff Baseball is a thrilling, heart-pounding, wild ride.</a></h2>
 
@@ -56,17 +56,14 @@
 			        <img src="images/soto-trophy.jpg"  style="max-width:50%;" alt="Juan Soto lifting trophy" />
    					 </figure>
 
-   					<p>This was an unprecedented stretch run. Every game was a thriller. And the fans were in for a wild experience.
+   					<p>In 2014, the Nats were affectionately dubbed "The Cardiac Nats" due to their penchant for late inning theatrics. In 2019 they took it to another level.
+   					This was an unprecedented stretch run. Every game was a thriller. And the fans were in for a wild experience.
    					To find out just how wild, we took FitBit data from fan volunteers and analyzed heart rate and sleeping patterns.</p>
    					<h1>This is what October Baseball does to you.</h1>
 
 
 
-				<div class="inner">
-					<ul class="actions">
-						<li><a href="#one" class="button alt scrolly big">View Analysis</a></li>
-					</ul>
-				</div>
+
 			</section>
 
 		<!-- One -->
