--- a/about.html
+++ b/about.html
@@ -48,20 +48,15 @@
 
 <div>
     <p style="float: left;"><img src="images/fitbit.jpg" height="400px" width="220px" border="2px"></p>
-   <p style = "color:white;"> This project was inspired by a Nationals fan exploring her own FitBit a week or two after the World Series, then noticing similar patterns on her friends' FitBits.</p>
-   						<p style = "color:white;"> This project was built with roughly 1GB of FitBit heart rate and sleep logs obtained in json and .csv format from 20 fan volunteers. The data was cleaned
-   						and normalized using Python and Pandas in Jupyter notebooks; the visualizations were built using Bokeh.
-   						The two game log style charts each feature only a subset of the fan data. The datasets for each were chosen on completeness.  There are a variety of reasons for incomplete data such as
+   <p style = "color:white; font-size:18px;"> This project was inspired by a Nationals fan exploring their own FitBit a week or two after the World Series, then noticing similar patterns on  friends' FitBits.</p>
+   						<p style = "color:white;font-size:15px;"> This project was built with roughly 1GB of FitBit heart rate and sleep logs obtained in json and .csv format from 20 fan volunteers; there were over 500,000 data points collected.
+   						The data was cleaned and normalized using Python and Pandas in Jupyter notebooks; the visualizations were built using Bokeh.</p>
+
+   						<p style = "color:white;font-size:15px;"> The two game log style charts each feature only a subset of the fan data. The datasets for each were chosen on completeness.  There are a variety of reasons for incomplete data such as
 						a device with a dead battery or problems syncing the device with the user account.</p>
 </div>
 					</header>
 
-					<h4 style = "color:white;">Created by Patti Rodgers</h4>
-					<p style="font-size:15px; color:white;">Patti is an IT professional who enjoys telling great stories with data. She also obviously enjoys Washington Nationals baseball.
-					Patti recently completed the Data Analytics and Visualization boot camp at George Washington University; she also completed the Machine Learning II mini program through Pragmatic.</p>
-					<a href="mailto:patti.rodgers@gmail.com">  Email Patti</a>
-				</div>
-			</section>
 
 			<!-- Footer -->
 					<footer id="footer">
