--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 		<!-- One -->
 			<article id="one" class="post style1">
 				<div class="image">
-					<img src="images/in_the_fight.jpg" style="max-height:20%;" alt="Fans in a crowd" data-position="75% center" />
+					<img src="images/in_the_fight.jpg" style="max-width:50%;" alt="Fans in a crowd" data-position="75% center" />
 				</div>
 				<div class="content">
 					<div class="inner">
