--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
 
 					<p>But the team launched an epic turnaround, winning 81 of the next 112 games, a blistering pace that would have resulted in the best record in
 					2019 baseball if it hadn't been for the historically bad start. The remainder of the season, and particularly late August through September, was
-					punctuated by late rallies, stellar pitching performances, defensive heroics, and solid whole-team wins. It would not be enough to win the National League East title-- the Nationals never
+					punctuated by late rallies, stellar pitching performances, defensive heroics, and solid whole-team wins set to a soundtrack of "Calma" and "Baby Shark" (do do do do do).
+					It would not be enough to win the National League East title-- the Nationals never
 					held first place all season-- but it was good enough to secure a Wild Card berth. </p>
 
 			 <figure>
