--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
    						<p style = "color:white;"> This project was built with roughly 1.5GB of FitBit heart rate and sleep logs obtained in json and .csv format from 35 fan volunteers. The data was cleaned
    						and normalized using Python and Pandas in Jupyter notebooks; the visualizations were built using Bokeh.</p>
 
-						<p style = "color:white;">Noteworthy game events were culled from <h href="https://www.baseball-reference.com/boxes/WAS/WAS201910010.shtml">Baseball Reference's game log</a> then cross-referenced
+						<p style = "color:white;">Noteworthy game events were culled from <a href="https://www.baseball-reference.com/boxes/WAS/WAS201910010.shtml"><span class="label">Baseball Reference's game log</span></a> then cross-referenced
 						with Twitter, using the earliest event-related tweet to establish the event's timestamp.  The two datasets for the game log-style charts were selected based on completeness; many fan logs for each
 						day contain large blocks of missing data, making timeline visualization difficult. The specific games were chosen for their expected high emotional value among Nats fans. </p>
 </div>
