--- a/fans.html
+++ b/fans.html
@@ -68,8 +68,9 @@
 						<li>The highest sleep quality in the sample is 10/28/19--two nights before the start of the World Series. </li>
 						</ul>
 
-						<p>Click on the legend to hide or unhide plot lines.</p><p></p>
-
+						<p>Click on the legend to hide or unhide plot lines.</p><br>
+						<p>Dashed vertical green lines mark important milestone games. Other dashed vertical lines mark the playoff game days, in the opponent's primary color </p>
+						<br>
 
 
 
