--- a/wildcard.html
+++ b/wildcard.html
@@ -57,7 +57,8 @@
 					could be a sign of anxiety or stress rather than excitement. </li>
 					<li>Heart rate for all fans increases steadily after Ryan Zimmerman's single, all the way to the end of the game.</li>
 					<li>Fan heart rates fall at different times, as some watch the post-game festivites while others end their evenings, but the pattern of decreasing heart rate is clear at some point for each fan.</li>
-					<li> There is currently no identified event for the communal spike in heart rate about an hour before game time; this could correspond to part of the pregame entertainment or crowd "hype" activities.</li>
+					<li> The communal spike in heart rate demonstrated pre-game among only the fans at the ballpark (not those watching at home) is suspected to be in response to an appearance by fan favorite pitcher [Aaron Barrett](https://www.mlb.com/player/aaron-barrett-502578) although this has not been fully verified. Barrett was not on the post season roster, having only recently returned to
+						baseball activities after a lengthy injury absense, but was part of the festivities and "hype".</li>
 <p></p>
 					<p> Click on the labels in the Legend to dim or activate individual plot lines. </p></p>  </div>
 
